--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_core: ^1.24.0
   firebase_auth: ^3.11.2
   fluttertoast: ^8.1.1
+  http: ^0.13.5
   flutter:
     sdk: flutter
 
